--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -33,6 +33,12 @@ gem "binding_of_caller"
 
 gem "hirb"
 
+gem 'devise'
+
+gem 'omniauth'
+
+gem 'omniauth-facebook'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
