--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -39,6 +39,8 @@ gem 'omniauth'
 
 gem 'omniauth-facebook'
 
+gem 'figaro'
+
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
