--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -41,6 +41,11 @@ gem 'omniauth-facebook'
 
 gem 'figaro'
 
+gem 'bootstrap-sass'
+group :development do
+  gem 'rails_layout'
+end
+
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
