--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -3,8 +3,10 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
 
+# Use CarrierWave to upload images
 gem 'carrierwave'
 
+# Use RMagick to manipulate images
 gem 'rmagick'
 
 # Use sqlite3 as the database for Active Record
