--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -6,6 +6,11 @@ gem 'rails', '4.0.2'
 #Use Nested forms to handle sending info from one form to multiple controllers
 gem "nested_form"
 
+gem 'seed_dump'
+
+#Use Fuzzily to create fuzzy search of users
+gem 'fuzzily'
+
 # Use CarrierWave to upload images
 gem 'carrierwave'
 
