--- a/weightable_practice_scaffolding/Gemfile
+++ b/weightable_practice_scaffolding/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
 
+gem "font-awesome-rails"
+
 # Use Nested forms to handle sending info from one form to multiple controllers
 gem "nested_form"
 
